--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -7,6 +7,7 @@
       "build_output_subfolder": ".",
       "locale": "ca-es",
       "monikers": [],
+      "moniker_ranges": [],
       "open_to_public_contributors": false,
       "type_mapping": {
         "Conceptual": "Content"
